Sentence restructuring in node/d.js and linter installation pages
Also updated the eslint file to list the rules in alphabetical order, because why not

--- a/code_samples/.eslintrc.json
+++ b/code_samples/.eslintrc.json
@@ -8,12 +8,6 @@
 		"ecmaVersion": 2017
 	},
 	"rules": {
-		"no-console": "off",
-		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
-		"no-trailing-spaces": ["error", { "skipBlankLines": true }],
-		"no-empty-function": "error",
-		"no-floating-decimal": "error",
-		"no-multi-spaces": "error",
 		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
 		"comma-dangle": ["error", "always-multiline"],
 		"comma-spacing": "error",
@@ -21,21 +15,27 @@
 		"curly": ["error", "multi-line", "consistent"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
-		"yoda": "error",
-		"object-curly-spacing": ["error", "always"],
+		"indent": ["error","tab"],
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
+		"no-console": "off",
+		"no-empty-function": "error",
+		"no-floating-decimal": "error",
 		"no-inline-comments": "error",
 		"no-lonely-if": "error",
+		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
+		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
+		"no-trailing-spaces": ["error", { "skipBlankLines": true }],
+		"object-curly-spacing": ["error", "always"],
+		"quotes": ["error", "single"],
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", "never"],
+		"spaced-comment": "error",
 		"space-in-parens": "error",
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
-		"spaced-comment": "error",
-		"indent": ["error","tab"],
-		"quotes": ["error", "single"],
-		"semi": ["error", "always"]
+		"semi": ["error", "always"],
+		"yoda": "error"
 	}
 }
