--- a/code_samples/.eslintrc.json
+++ b/code_samples/.eslintrc.json
@@ -15,7 +15,7 @@
 		"curly": ["error", "multi-line", "consistent"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
-		"indent": ["error","tab"],
+		"indent": ["error", "tab"],
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
 		"no-console": "off",
@@ -27,15 +27,17 @@
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
 		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
 		"no-trailing-spaces": ["error", { "skipBlankLines": true }],
+		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
+		"prefer-const": "error",
 		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", "never"],
-		"spaced-comment": "error",
 		"space-in-parens": "error",
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
-		"semi": ["error", "always"],
+		"spaced-comment": "error",
 		"yoda": "error"
 	}
 }
