Adjust the ESLint page to make our config file 'optional'

--- a/code_samples/.eslintrc.json
+++ b/code_samples/.eslintrc.json
@@ -26,7 +26,7 @@
 		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
 		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
-		"no-trailing-spaces": ["error", { "skipBlankLines": true }],
+		"no-trailing-spaces": ["error"],
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
