--- a/code_samples/.eslintrc.json
+++ b/code_samples/.eslintrc.json
@@ -33,7 +33,11 @@
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"space-before-blocks": "error",
-		"space-before-function-paren": ["error", "never"],
+		"space-before-function-paren": ["error", {
+			"anonymous": "never",
+			"named": "never",
+			"asyncArrow": "always"
+		}],
 		"space-in-parens": "error",
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
