--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "description": "The official guide for discord.js, created and maintained by core members of its community.",
   "version": "1.0.0",
   "scripts": {
-    "lint": "npm run lint:md && npm run lint:js",
-    "lint:js": "eslint ./code_samples",
-    "lint:md": "eslint ./guide --ext md"
+    "lint": "eslint . --ext md,js"
   },
   "repository": "https://github.com/discordjs/guide.git",
   "keywords": [
