--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "eslint": "^4.17.0",
     "eslint-plugin-markdown": "^1.0.0",
     "vuepress": "^0.14.4"
+  },
+  "dependencies": {
+    "vue-discord-message": "^2.0.0",
+    "vuepress-theme-yuu": "^1.0.0"
   }
 }
