--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^4.17.0",
-    "eslint-config-aqua": "^4.4.1",
-    "eslint-plugin-markdown": "^1.0.0",
+	"eslint-config-sora": "^2.0.0",
+	"eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "vuepress": "^0.14.10"
   },
