--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vuepress": "^0.14.4"
   },
   "dependencies": {
+    "semver": "^6.0.0",
     "vue-discord-message": "^3.0.0",
     "vuepress-theme-yuu": "^1.1.0"
   }
