--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "eslint-config-sora": "^2.0.0",
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "vuepress": "^0.14.10"
+    "vuepress": "^1.2.0"
   },
   "dependencies": {
+    "@vuepress/plugin-google-analytics": "^1.2.0",
     "semver": "^6.0.0",
-    "vue-discord-message": "^3.0.0",
-    "vuepress-theme-yuu": "^1.1.0"
+    "vue-discord-message": "^3.2.3",
+    "vuepress-theme-yuu": "^2.0.0"
   }
 }
