Explicitly set NODE_ENV in build script
VuePress@1.2.0 has a bug where it doesn't set the node env to production when running the build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint . --ext js,md,vue",
     "serve": "vuepress dev guide",
-    "build": "vuepress build guide"
+    "build": "NODE_ENV=production vuepress build guide"
   },
   "repository": "https://github.com/discordjs/guide.git",
   "keywords": [
