--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vuepress-vite": "^2.0.0-beta.6"
     },
     "dependencies": {
+        "@discord-message-components/vue": "^0.1.3",
         "semver": "^6.0.0"
     }
 }
