--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "homepage": "https://discordjs.guide",
     "devDependencies": {
         "@vuepress/plugin-docsearch": "^2.0.0-beta.20",
+        "@vuepress/plugin-google-analytics": "^2.0.0-beta.20",
         "babel-eslint": "^10.0.1",
         "eslint": "^7.18.0",
         "eslint-config-sora": "^3.1.0",
