--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "vuepress-vite": "^2.0.0-beta.20"
     },
     "dependencies": {
-        "@discord-message-components/vue": "^0.2.0",
-        "vue3-click-away": "^1.2.1"
+        "@discord-message-components/vue": "^0.2.0"
     }
 }
