--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "lint": "eslint . --ext js,md,vue",
-        "serve": "vuepress dev guide",
+        "dev": "vuepress dev guide",
         "build": "NODE_ENV=production vuepress build guide"
     },
     "repository": "https://github.com/discordjs/guide.git",
