--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     },
     "homepage": "https://discordjs.guide",
     "devDependencies": {
+        "@babel/eslint-parser": "^7.15.8",
         "@vuepress/plugin-docsearch": "^2.0.0-beta.24",
         "@vuepress/plugin-google-analytics": "^2.0.0-beta.24",
-        "babel-eslint": "^10.0.1",
         "eslint": "^7.18.0",
         "eslint-config-sora": "^3.1.0",
-        "eslint-plugin-markdown": "^1.0.0",
+        "eslint-plugin-markdown": "^2.2.1",
         "eslint-plugin-vue": "^7.5.0",
         "vuepress-vite": "^2.0.0-beta.24"
     },
