Make "question" field required

--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -16,3 +16,5 @@ body:
     attributes:
       label: Question
       description: Your question about the referenced part of the guide
+    validations:
+      required: true
