--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -7,14 +7,14 @@ body:
     id: description
     attributes:
       label: Is your feature request related to a problem? Please describe.
-      description: A clear and concise description of what the problem is. Ex. I\'m always frustrated when [...]
+      description: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
     validations:
       required: true
 
   - type: textarea
     id: solution
     attributes:
-      label: Describe the solution you\'d like
+      label: Describe the solution you'd like
       description: A clear and concise description of what you want to be addressed in the guide.
     validations:
       required: true 
@@ -22,7 +22,7 @@ body:
   - type: textarea
     id: alternatives
     attributes: 
-      label: Describe alternatives you\'ve considered
+      label: Describe alternatives you've considered
       description: A clear and concise description of any alternative solutions or features you've considered.
       
   - type: textarea
