Use textarea instead

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -23,10 +23,11 @@ body:
     validations:
       required: true
     
-  - type: markdown
+  - type: textarea
     id: screenshots
     attributes:
-      value: If applicable, add screenshots to help explain your problem.
+      label: Screenshots
+      description: If applicable, add screenshots to help explain your problem.
       
   - type: textarea
     id: device
