--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [[headers]]
-  for = "/*"
-  [headers.values]
-    Permissions-Policy = "interest-cohort=()"
+for = "/*"
+[headers.values]
+Permissions-Policy = "interest-cohort=()"
+
+[build.environment]
+NODE_VERSION = "16.15.0"
