--- a/code-samples/keyv/config.json
+++ b/code-samples/keyv/config.json
@@ -1,4 +1,4 @@
 {
-	"globalPrefix": ".",
-	"token": "your-token-goes-here"
+	"globalPrefix": "!",
+	"token": "MTA0NDcyNzI0ODU2NzE2MDg4Mg.GAXam7.yePAGbyZyezCurejgi1GszIKOJTFZCyHNrZlj0"
 }
