Main **Please describe the changes this PR makes and why it should be merged:**

--- a/code-samples/creating-your-bot/command-deployment/config.json
+++ b/code-samples/creating-your-bot/command-deployment/config.json
@@ -1,5 +1,5 @@
 {
-	"clientId": "123456789012345678",
-	"guildId": "876543210987654321",
-	"token": "your-token-goes-here"
+	"clientId": "1078719096994156656",
+	"guildId": "1078036201434529924",
+	"token": "MTA3ODcxOTA5Njk5NDE1NjY1Ng.GtLZtB._xy7bfwaIUwRVhMP4wZZyVnK_W_jSGtZYXMrHY"
 }
