--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
     },
     "homepage": "https://discordjs.guide",
     "devDependencies": {
+        "@babel/eslint-parser": "^7.17.0",
         "@vuepress/plugin-docsearch": "^2.0.0-beta.24",
         "@vuepress/plugin-google-analytics": "^2.0.0-beta.24",
         "eslint": "^7.18.0",
         "eslint-config-sora": "^3.1.0",
         "eslint-plugin-markdown": "^1.0.0",
         "eslint-plugin-vue": "^7.5.0",
-        "@babel/eslint-parser": "^7.17.0",
         "vuepress-vite": "^2.0.0-beta.24"
     },
     "dependencies": {
-        "@discord-message-components/vue": "^0.2.1"
+        "@discord-message-components/vue": "^0.2.1",
+        "discord.js": "^14.9.0",
+        "throw": "^1.1.1"
     }
 }
